Bug 57591 - [drm:intel_enable_lvds] *ERROR* timed out waiting for panel to power on
Summary: [drm:intel_enable_lvds] *ERROR* timed out waiting for panel to power on
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-05 13:50 UTC by Martin Kadlec
Modified: 2017-11-19 23:57 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.9
Subsystem:
Regression: No
Bisected commit-id:


Attachments
lspci -vv (29.44 KB, text/plain)
2013-05-05 13:50 UTC, Martin Kadlec
Details
dmesg output with drm.debug=0xe (100.62 KB, text/plain)
2013-05-06 10:57 UTC, Martin Kadlec
Details
Increase i915 LVDS power on timeout from 1 to 2 second (931 bytes, patch)
2017-11-19 23:57 UTC, Florent
Details | Diff

Description Martin Kadlec 2013-05-05 13:50:57 UTC
Created attachment 100751 [details]
lspci -vv

Hi,
I'm using Ubuntu 13.04 on Asus VX6 (1.8GHz Atom - 2 cores, optimus nVidia ION) with Kernel 3.9.0. and I get this error every time on boot:

[   15.728106] [drm:intel_enable_lvds] *ERROR* timed out waiting for panel to power on

I saw some other people with similar HW to get this error on different distributions so it shouldn't be Ubuntu specific.

I definitely get this error with Kernel 3.8 and 3.9 but I think I had it with 3.2/3.5 versions as well. (I'm not using Linux for a very long time yet).

stdout/err from lspci -vv is attached.

I added Daniel to CC because I saw him on a similar bug report. If I should not CC anyone the I'm sorry :)
Comment 1 Daniel Vetter 2013-05-06 08:19:54 UTC
Can you please boot your 3.9 kernel with drm.debug=0xe added to your kernel bootline and then attach the complete output of dmesg after the boot has finished?
Comment 2 Martin Kadlec 2013-05-06 10:57:19 UTC
Created attachment 100791 [details]
dmesg output with drm.debug=0xe

Done, it is attached.
Comment 3 Daniel Vetter 2013-05-06 15:51:44 UTC
Hm, I forgotten to ask: Is there anything else bad going on in your system, or is everything nicely working besides that ERROR in dmesg?

And can you please test the latest drm-intel-nightly git branch from

http://cgit.freedesktop.org/~danvet/drm-intel/

we've improved the lvds enabling sequence recently and made it more hw spec compliant. Maybe this helps.
Comment 4 Martin Kadlec 2013-05-06 16:54:15 UTC
Everything is working more or less fine, occasional my stops responding, but restarting lightdm service fixes that and I don't think it is any related.

About the drm-intel-nightly, do you mean this commit?:

http://cgit.freedesktop.org/~danvet/drm-intel/commit/?h=drm-intel-nightly&id=b2e3eab83184030c847a5fb209f30b0abdbf38b7

I downloaded it, but I'm afraid I'll need a little help on how to use it. The most important steps should be enough or point me to some how-to website  if there is any. 

I suppose I should run the makefile (any special parameters/flags?) and then run some commands to put the compiled result to my kernel.
Comment 5 Martin Kadlec 2013-05-06 16:55:08 UTC
*my UI
Comment 6 Daniel Vetter 2013-05-06 18:41:00 UTC
You need the entire git tree to have working kernel sources, see e.g. http://blog.ffwll.ch/2012/05/git-for-bug-reporters.html

For compiling&installing a kernel on your system please consult the howtos for the distro of your choice.
Comment 7 Martin Kadlec 2013-05-06 21:03:29 UTC
Well, first of all, I must say when I've been reporting this bug, I did not expect I'll be compiling my first  Linux kernel :)

But I did and it worked! The error message disappeared and hopefully the actual problem with it (whatever it was). Thank you for fixing bugs so quickly that they are fixed even before I manage to report them :)

Cheers,
Martin
Comment 8 Daniel Vetter 2013-05-06 21:52:10 UTC
Neat ;-) Thanks for reporting this issue, I'll close this for now since all the relevant patches should be upstream and will land in 3.10. If 3.10 is broken for you again with the error message, please reopen this bug report.

And of course if anything else breaks in intel gfx, please report that in a new bug report.
Comment 9 Florent 2017-11-19 23:53:37 UTC
Hi,

I'm experiencing the same bug on my Toshiba Satellite Z930 with Linux kernels 4.13.12 (Fedora) as well as 4.14.0 (Linux master branch).

By increasing the timeout in the `drivers/gpu/drm/i915/intel_lvds.c` file, the message disappears.

Regards,
Florent
Comment 10 Florent 2017-11-19 23:57:24 UTC
Created attachment 260723 [details]
Increase i915 LVDS power on timeout from 1 to 2 second

Some laptops (including the Toshiba Satellite Z930) need between 1 and 2 seconds to power on their screen. Since the i915 LVDS registration code waits for the panel to be on, we need to wait more than 1 second to avoid displaying the error message.

Note You need to log in before you can comment on or make changes to this bug.