drm/i915: Fix drm:intel_enable_lvds ERROR message in kernel log

Fix `[drm:intel_enable_lvds] *ERROR* timed out waiting for panel to
power on` in kernel log at boot time.

This patch relates to the following bugs:
* https://bugs.freedesktop.org/show_bug.cgi?id=103414
* https://bugzilla.kernel.org/show_bug.cgi?id=57591

Toshiba Satellite Z930 laptops needs between 1 and 2 seconds to power
on its screen during Intel i915 DRM initialization. This currently
results in a `[drm:intel_enable_lvds] *ERROR* timed out waiting for
panel to power on` message appearing in the kernel log during boot
time and when stopping the machine.

This change increases the timeout of the `intel_enable_lvds` function
from 1 to 2 seconds, letting enough time for the Satellite 930 LCD
screen to power on, and suppressing the error message from the kernel
log.

This patch has been successfully tested on Linux 4.14 running on a
Toshiba Satellite Z930.

Signed-off-by: Florent Flament <contact@florentflament.com>